# Gemma-4-Good-Hackathon

./: .gitignore  CLAUDE.md  GEMINI.md  README.md  gemma4_goodhackathon_main.ipynb  pyproject.toml
.flash/: resources.pkl
.playwright-mcp/: page-2026-04-06T05-01-27-996Z.yml  page-2026-04-06T05-02-36-730Z.yml  page-2026-04-06T05-02-59-029Z.yml  page-2026-04-06T05-03-50-386Z.yml  page-2026-04-06T05-04-14-632Z.yml  page-2026-04-06T05-04-34-306Z.yml  page-2026-04-06T05-04-54-936Z.yml  page-2026-04-06T05-05-19-449Z.yml  page-2026-04-06T05-05-40-371Z.yml  page-2026-04-06T05-06-00-795Z.yml  page-2026-04-06T05-06-21-162Z.yml
data/fpl_tables/: fpl_2026.json
data/programs/: ccap.json  ega.json  emergency_assistance.json  energy_assistance.json  medical_assistance.json  mfip.json  minnesotacare.json  snap.json  unemployment_insurance.json  wic.json
data/raw/dhs_combined_manual/: _ch13_subsections.json  _temp_ch04.json  _temp_cm_000401.json  _temp_cm_001303.json  _temp_cm_001306.json  _temp_cm_001315.json  _temp_cm_001906.json  _temp_cm_002009.json  _temp_cm_002012.json  _temp_cm_002018.json  _toc_all_links.json  _toc_links.json  section_ch0004.txt  section_sec000401.txt  section_sec001303.txt  section_sec001306.txt  section_sec001315.txt  section_sec001906.txt  section_sec002009.txt  section_sec002012.txt  section_sec002018.txt
data/training/: batch_01_core.jsonl  batch_02_languages.jsonl  batch_03_edge_cases.jsonl  batch_04_emergency_multi.jsonl  combined.jsonl  dataset-metadata.json  final.jsonl
deploy/: flash_navigator.py  modal_app.py  modal_finetune.py
docs/competition/: competition_overview.md  competition_rules.md
docs/conversation/: claude_conversation.md
docs/ideas/: competition_ideas.md
docs/outputs/: error.md  error01.md
docs/reports/: modal_blog.md
docs/research/: minnesota_benefits_deep_dive.md  plain_language_gov_navigator_research.md  toolchain_reference_guide.md  trades_ai_landscape_research.md
notebook_images/: 1926969-google-gemma-4.avif
scripts/: batch_extract_dhs.py  download_sam_gov.py  export_dhs_cookies.py  extract_dhs_page.py  generate_training_data.py  ingest_all.py  scrape_blocked_counties.py  scrape_county_pages.py  scrape_dhs_manual.py  scrape_dhs_sections.py
src/: app.py  flash_example.py
src/navigator/: __init__.py  config.py  eligibility.py  intake.py  models.py  ollama_client.py  prompts.py  readability.py  response.py
tests/: conftest.py  test_benefits_search.py  test_bm25.py  test_county_programs.py  test_document_requirements.py  test_eligibility_engine.py  test_embeddings.py  test_fpl.py  test_integration.py  test_models.py  test_ollama_client.py  test_readability.py  test_response.py  test_retrieval.py  test_store.py
training/: export_gguf.py  kaggle_finetune.ipynb  kernel-metadata.json  prepare_dataset.py  train_unsloth.py
(+25 files in other folders)
