[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/navigator", "src/app.py"]

[project]
name = "navigator"
version = "0.1.0"
description = "Plain Language Government Navigator — Gemma 4 Good Hackathon"
requires-python = ">=3.13, <3.14"
dependencies = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "jupyterlab>=4.5.5",
    "kaggle>=2.0.0",
    "matplotlib>=3.10.8",
    "pandas==2.3.3",
    "python-dotenv==1.2.2",
    "numpy==2.2.6",
    "tensorflow[and-cuda]>=2.21.0",
    "scikit-learn>=1.8.0",
    "plotly>=6.6.0",
    "pandas-stubs~=2.3.3",
    "torch>=2.6.0",
    "scipy-stubs~=1.17.1",
    "statsmodels>=0.14.6",
    "cudf-cu12==26.2.*",
    "dask-cudf-cu12==26.2.*",
    "cuml-cu12==26.2.*",
    "cugraph-cu12==26.2.*",
    "nx-cugraph-cu12==26.2.*",
    "cuxfilter-cu12==26.2.*",
    "cucim-cu12==26.2.*",
    "pylibraft-cu12==26.2.*",
    "raft-dask-cu12==26.2.*",
    "cuvs-cu12==26.2.*",
]

[project.optional-dependencies]
navigator = [
    "chromadb>=1.0.0",
    "sentence-transformers>=4.1.0",
    "rank-bm25>=0.2.2",
    "gradio>=5.29.0",
    "textstat>=0.7.4",
    "ollama>=0.5.1",
    "pydantic>=2.11.3",
    "httpx>=0.28.1",
    "beautifulsoup4>=4.13.4",
    "lxml>=5.4.0",
    "playwright>=1.58.0",
    "modal>=1.4.1",
]

[tool.uv.sources]
torch = { index = "pytorch-cu130" }

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[[tool.uv.index]]
name = "nvidia-pypi"
url = "https://pypi.nvidia.com"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
